# wechatbot

./: Dockerfile  README.md  config.yaml.example  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: docker-dev.yml  docker-latest.yml  docker-tag.yml
src/: chatbot.ts  config.ts  interface.ts  main.ts
