[tool.poetry]
name = "wechatbot"
version = "0.0.1"
description = "WeChat Bot"
authors = ["Milin <417156994@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[experimental]
new-installer = false
